tests/paczka1/fuzzy1/14515915.err
Error in line 3: A26 A26 -1,3
Error in line 1: A26 A26 73,9
Error in line 6: A26 A389 40,5
Error in line 8: A26 A26 47,1
Error in line 9: 9j74fxP A468 196,2
Error in line 16: SdrJ7Wn S746 93,8
Error in line 12: P3PAjyQ1WTM A26 15,2
Error in line 32: yVAY A389 31,4
Error in line 22: YNE6r8 A468 72,1
Error in line 39: A26 A468 -1,1
